test/files/neg/checksensibleUnit.scala
class Test {
  var c = 0
  println((c = 1) > 0)
  println((c = 1) <= 0)
}
